= team.scss fixed photo on small displays;

--- a/view/team.scss
+++ b/view/team.scss
@@ -16,6 +16,7 @@ ul{
     width:100%;
     min-height: 100px;
     padding-top: 100px;
+    padding-bottom: 100px;
     margin-top: 63%;
 }
 
